FAI-3642 Accept the levy in data and project it
