# src/FundingProjection.Api/Models/Responses/EstimatesTimeline.cs
@@ -1,0 +1,7 @@
+﻿namespace SFA.DAS.FundingProjection.Api.Models.Responses;
+
+public class EstimatesTimeline
+{
+    public long AccountId { get; set; }
+    public List<MonthlyFundingBreakdown> Projections { get; set; } = [];
+}
